[back to top btn]fix on mobile

--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -121,6 +121,10 @@ a, .description a {
     }
 }
 
+#back-to-top {
+    z-index: 99;
+}
+
 .section {
         
     p {
